Finish input-output sequencing code for DeepAR

--- a/3.1_DeepAR.ipynb
+++ b/3.1_DeepAR.ipynb
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(output_dir + \"train_data.csv\")"
+    "df = pd.read_csv(output_dir + \"train_data.csv\")\n",
+    "df[\"time\"] = pd.to_datetime(df[\"time\"])"
    ]
   },
   {
@@ -236,18 +237,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                      time  consumption_MWh  consumption_lag2  trend  \\\n",
-       "0      2018-01-01 02:00:00         24635.32          27412.81      2   \n",
-       "1      2018-01-01 03:00:00         23872.12          26324.39      3   \n",
-       "2      2018-01-01 04:00:00         23194.89          24635.32      4   \n",
-       "3      2018-01-01 05:00:00         23071.96          23872.12      5   \n",
-       "4      2018-01-01 06:00:00         23267.90          23194.89      6   \n",
-       "...                    ...              ...               ...    ...   \n",
-       "52577  2023-12-31 19:00:00         35090.93          34549.42  52579   \n",
-       "52578  2023-12-31 20:00:00         33310.94          36193.59  52580   \n",
-       "52579  2023-12-31 21:00:00         32083.96          35090.93  52581   \n",
-       "52580  2023-12-31 22:00:00         30469.49          33310.94  52582   \n",
-       "52581  2023-12-31 23:00:00         30029.91          32083.96  52583   \n",
+       "                     time  consumption_MWh  consumption_lag2  trend  \\\n",
+       "0     2018-01-01 02:00:00         24635.32          27412.81      2   \n",
+       "1     2018-01-01 03:00:00         23872.12          26324.39      3   \n",
+       "2     2018-01-01 04:00:00         23194.89          24635.32      4   \n",
+       "3     2018-01-01 05:00:00         23071.96          23872.12      5   \n",
+       "4     2018-01-01 06:00:00         23267.90          23194.89      6   \n",
+       "...                   ...              ...               ...    ...   \n",
+       "52577 2023-12-31 19:00:00         35090.93          34549.42  52579   \n",
+       "52578 2023-12-31 20:00:00         33310.94          36193.59  52580   \n",
+       "52579 2023-12-31 21:00:00         32083.96          35090.93  52581   \n",
+       "52580 2023-12-31 22:00:00         30469.49          33310.94  52582   \n",
+       "52581 2023-12-31 23:00:00         30029.91          32083.96  52583   \n",
        "\n",
        "           hour_sin      hour_cos       day_sin  day_cos     month_sin  \\\n",
        "0      7.071068e-01  7.071068e-01  7.818315e-01  0.62349  5.000000e-01   \n",
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2ce0c2bb-c679-47c0-9121-541b7fec3b99",
    "metadata": {},
    "outputs": [],
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "09ab9e5e-5059-444f-a6c4-06f482a564a2",
    "metadata": {},
    "outputs": [],
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "6c79992d-2169-4954-ad9b-8dc8fe45078d",
    "metadata": {},
    "outputs": [],
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "1fd091fe-bef0-4150-9092-cf406a0ec9aa",
    "metadata": {},
    "outputs": [],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "88add024-91bf-4f64-b570-a35a33894211",
    "metadata": {},
    "outputs": [
@@ -347,7 +348,7 @@
        "array([27412.81, 26324.39, 24635.32, ..., 35090.93, 33310.94, 32083.96])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "4587b436-bce0-439e-8233-9c4afbf0400f",
    "metadata": {},
    "outputs": [
@@ -369,19 +370,19 @@
        "array([23872.12, 23194.89, 23071.96, ..., 30469.49, 30029.91,      nan])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# This is consumption_MWh at T+1, the target value at T.\n",
+    "# This is consumption_MWh at T+1, the target value at T\n",
     "future_target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "0792cda8-94e7-4efb-8dbd-d76ae3d7cd47",
    "metadata": {},
    "outputs": [
@@ -403,7 +404,7 @@
        "         1.00000000e+00, -2.44929360e-16,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "5380f3b7-be0d-4a4d-963f-a6575d37226d",
    "metadata": {},
    "outputs": [
@@ -437,7 +438,7 @@
        "                    nan,             nan,             nan]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "5e9036ff-ff66-49a1-aaa9-4909e029e50a",
    "metadata": {},
    "outputs": [],
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "43454623-2e48-4579-b496-d80914647bc5",
    "metadata": {},
    "outputs": [
@@ -488,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "f45dd097-1e03-4871-a912-2f3048b200b6",
    "metadata": {},
    "outputs": [],
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "a4c11eac-1984-4a17-994b-dd960db93563",
    "metadata": {},
    "outputs": [
@@ -698,7 +699,7 @@
        "[52581 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "190ff97f-d079-4989-bb6d-bdc979fc5da5",
    "metadata": {},
    "outputs": [
@@ -901,7 +902,7 @@
        "[52581 rows x 8 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,81 +913,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "2cf65954-517b-4712-97aa-42e089573017",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_steps = len(df_future)\n",
-    "input_length = 48 # Last 48 hours as input\n",
+    "input_length = 72 # T-N to T hours as input\n",
     "input_dims = 8 # Consumption lag 2, trend, 6 cyclical columns\n",
-    "\n",
-    "output_length = 1 # RNN predicts one by one\n",
-    "horizon = 32 # We have to predict from T+1 to T+32, though we are only interested in T+8 to 32."
+    "output_length = 32 # We are only interested in T+8 to 32, but we have to predict from T+1 because we need hidden states at each time step."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
+   "id": "da695753-60ee-4d17-8481-e27c42529c78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the index of the first 16:00 row in the data, where the index is bigger than input_length - 1. This will be the first T.\n",
+    "first_t = df.loc[(df.time.dt.hour == 16) & (df.index >= input_length - 1)].index.values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "efba5029-5fc0-4ab2-8f63-8c7925b9b97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_t "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "1ae7dd17-e961-4cb9-8d6f-a5d25db5aeae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the index of the last 16:00 row in the data, with 32 time steps after it. This will be the last T.\n",
+    "last_t = df.loc[(df.time.dt.hour == 16) & (df.index + output_length - 1 <= df.index.values[-1])].index.values[-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a509444b-8535-44d9-8b41-da8e04dd2040",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52526"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_t "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "355e1fee-bb5a-410f-8c90-a7cd433c8209",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(48, 8)"
+       "(72, 8)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# One input sequence: past target (T) & future covariates (T+1)\n",
+    "# One input sequence: past target (T-48 / T) & future covariates (T - 47 / T+1)\n",
     "input_seq = np.concatenate((\n",
-    "        df_past.iloc[0:input_length, 0].values.reshape(-1, 1),\n",
-    "        df_future.iloc[0:input_length, 1:].values\n",
+    "        df_past.iloc[(first_t - input_length):first_t, 0].values.reshape(-1, 1),\n",
+    "        df_future.iloc[(first_t - input_length):first_t, 1:].values\n",
     "    ), axis = 1)\n",
     "input_seq.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "e31804e1-ac8f-4189-90ef-391a4abc7391",
+   "execution_count": 56,
+   "id": "0cddc494-b847-408a-a20f-8455c331ebc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28899.26"
+       "(32, 8)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# One output sequence: future target (T+1).\n",
-    "output_seq = df_future.iloc[input_length - 1, 0]\n",
-    "output_seq"
+    "# One output sequence: future target (T+1 / 32) & future covariates (T+1 / 32).\n",
+    "output_seq = df_future.iloc[first_t:(first_t + output_length), :].values\n",
+    "output_seq.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "159827b9-f633-435f-88e9-4a3effda324f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of possible sequences: 2186\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_sequences = (last_t - first_t) // 24 + 1 # Number of 16:00 rows followed by a sufficient input / output sequence\n",
+    "print(\"Number of possible sequences: \" + f\"{n_sequences}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "860bb74a-cf1f-405c-be9a-2d1871b8f678",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the remaining sequences\n",
+    "for t in range(first_t, last_t + 1, 24):\n",
+    "\n",
+    "    # Get input sequence\n",
+    "    new_input = np.concatenate((\n",
+    "        df_past.iloc[(t - input_length):t, 0].values.reshape(-1, 1),\n",
+    "        df_future.iloc[(t - input_length):t, 1:].values\n",
+    "    ), axis = 1)\n",
+    "\n",
+    "    # Get output sequence\n",
+    "    new_output = df_future.iloc[t:(t + output_length), :].values\n",
+    "\n",
+    "    if t == first_t:\n",
+    "\n",
+    "        # Initialize arrays of sequences\n",
+    "        input_sequences = np.array([new_input])\n",
+    "        output_sequences = np.array([new_output])\n",
+    "        \n",
+    "    else:\n",
+    "        # Concatenate to arrays of sequences\n",
+    "        input_sequences = np.concatenate((input_sequences, [new_input]), axis = 0)\n",
+    "        output_sequences = np.concatenate((output_sequences, [new_output]), axis = 0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "253bf525-8f95-43af-9c5c-356248ae6cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2186, 72, 8)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_sequences.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "45ecfbe6-7de0-46bc-8435-5fc5ae5ecaf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2186, 32, 8)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_sequences.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "795a6b5b-eeae-4c9f-ab47-e371e6bd6fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "39635.29"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Should be the last past target of the first input sequence (row first_t in df_past)\n",
+    "# Also the future target at row (first_t - 3)  in df_future\n",
+    "input_sequences[0, -1, 0] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "508fbeb8-c962-47ea-93d1-06e3f50ce548",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82    40593.83\n",
+       "83    40955.07\n",
+       "84    39505.55\n",
+       "85    39635.29\n",
+       "86    39952.75\n",
+       "87    39649.45\n",
+       "88    40063.17\n",
+       "Name: consumption_lag2, dtype: float64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_past.iloc[82:89, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "c7ad926d-4c91-4692-b3c6-913538b86341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40487.65"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Should be the first future target of the first input sequence (row first_t + 1 in df_future)\n",
+    "output_sequences[0, 0, 0] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "451900a0-09c0-44fe-b143-722df28598d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "82    39635.29\n",
+       "83    39952.75\n",
+       "84    39649.45\n",
+       "85    40063.17\n",
+       "86    40487.65\n",
+       "87    39936.25\n",
+       "88    38772.68\n",
+       "Name: consumption_MWh, dtype: float64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_future.iloc[82:89, 0]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d19a8804-c30a-445c-9f33-f138380754f9",
+   "id": "c3191d2d-983c-4bce-bbd3-6f1075fe8518",
    "metadata": {},
    "source": [
-    "This will only work for h = 1.\n",
-    "\n",
-    "For h > 1, you will need the future covariates at h, and the prediction at h-1.\n",
-    "\n",
-    "Probably best to make the output sequence 36-long, include future targets along with future covariates.\n",
-    "\n",
-    "Then at h=1, inputs are past target & future covariates from the input sequence.\n",
-    "At h > 1, inputs are the prediction from h - 1, & future covariates from the output sequence."
+    "Sequencing seems successful."
    ]
   }
  ],
