Start writing quantile LSTM architecture

--- a/3.1_QuantileLSTM.ipynb
+++ b/3.1_QuantileLSTM.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "id": "b6ef11cc-56ac-42e0-98bc-d8e5baa08288",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\PC\\Documents\\WorkLocal\\DataScience\\GitHub\\DeepLearningEnergyForecasting\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -22,8 +13,8 @@
     "import lightning as L\n",
     "import optuna\n",
     "\n",
-    "# Pruning for Optuna\n",
     "from lightning.pytorch.callbacks import Callback\n",
+    "from pytorch_forecasting.metrics.quantile import QuantileLoss\n",
     "from optuna.integration.pytorch_lightning import PyTorchLightningPruningCallback"
    ]
   },
@@ -1236,6 +1227,163 @@
    "metadata": {},
    "source": [
     "Sequencing seems successful."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff2a79ac-10d9-4de2-b973-99d6d60421cc",
+   "metadata": {},
+   "source": [
+    "## Data prep: Torch datasets & dataloaders"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "687c517f-376f-43e2-8839-16e9b261e80f",
+   "metadata": {},
+   "source": [
+    "## Model testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "3ebf5f88-a563-4c60-91e0-c196ffff92f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 3, 5])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.randn(2, 3, 5).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2da1985-55fe-4b63-bf5a-fed283a299e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class QuantileLSTM(L.LightningModule):\n",
+    "\n",
+    "    # Initialize model\n",
+    "    def __init__(self, hyperparams_dict):\n",
+    "        \n",
+    "         # Delegate function to parent class\n",
+    "        super().__init__() \n",
+    "        \n",
+    "        # Save external hyperparameters so they are available when loading saved models\n",
+    "        self.save_hyperparameters(logger = False) \n",
+    "\n",
+    "        # Define hyperparameters\n",
+    "        self.input_length = hyperparams_dict[\"input_length\"] # Length of sequence\n",
+    "        self.output_length = hyperparams_dict[\"output_length\"] # Length of sequence\n",
+    "        self.input_size = hyperparams_dict[\"input_size\"] # Number of features\n",
+    "        self.horizon = hyperparams_dict[\"horizon\"] # Start of the relevant forecast horizon\n",
+    "        self.quantiles = hyperparams_dict[\"quantiles\"] # Provided as list of floats\n",
+    "        self.learning_rate = hyperparams_dict[\"learning_rate\"]\n",
+    "        self.lr_decay = hyperparams_dict[\"lr_decay\"]\n",
+    "        self.num_layers = hyperparams_dict[\"num_layers\"]\n",
+    "        self.hidden_size = hyperparams_dict[\"hidden_size\"]\n",
+    "        self.dropout_rate = hyperparams_dict[\"dropout_rate\"]\n",
+    "\n",
+    "        # Define architecture\n",
+    "        \n",
+    "        # LSTM input: input, (prev_hidden_state, prev_cell_state)\n",
+    "        # Shapes: (N, input_length, input_size), ((num_layers, N, hidden_size), (num_layers, N, hidden_size))\n",
+    "        self.lstm = torch.nn.LSTM(\n",
+    "            input_size = self.input_size,\n",
+    "            hidden_size = self.hidden_size,\n",
+    "            num_layers = self.num_layers,\n",
+    "            batch_first = True\n",
+    "        )\n",
+    "        # LSTM output: output, (last_hidden_state, last_cell_state)\n",
+    "        # Shapes: (N, input_length, hidden_size), ((num_layers, N, hidden_size), (num_layers, N, hidden_size))\n",
+    "\n",
+    "        # Output layer input: LSTM output, shape (N, input_length, hidden_size)\n",
+    "        self.output_layer = torch.nn.Linear(\n",
+    "            in_features = self.hidden_size,\n",
+    "            out_features = 1\n",
+    "        )\n",
+    "        # Output layer output: Scalar prediction.\n",
+    "\n",
+    "        # Loss function: Quantile loss\n",
+    "        self.loss = QuantileLoss(quantiles = self.quantiles)\n",
+    "\n",
+    "    # Define forward propagation\n",
+    "    def forward(self, input_chunk, prev_states = None): # Pass prev_states as (prev_hidden_state, prev_cell_state)\n",
+    "\n",
+    "        # Pass inputs through LSTMs\n",
+    "        if prev_states:\n",
+    "            lstm_output, (last_hidden_state, last_cell_state) = self.lstm(input_chunk, prev_states)\n",
+    "        else: # If prev_states is not passed, they are automatically initialized as zeroes\n",
+    "            lstm_output, (last_hidden_state, last_cell_state) = self.lstm(input_chunk)\n",
+    "\n",
+    "        # Pass LSTM output through output layer\n",
+    "        preds = self.output_layer(lstm_output)\n",
+    "\n",
+    "        return last_hidden_state, last_cell_state, preds\n",
+    "\n",
+    "    # Define training step\n",
+    "    def training_step(self, batch, batch_idx):\n",
+    "\n",
+    "        # Initialize variables to record horizon, hidden & cell states, predictions\n",
+    "        h = 0\n",
+    "        prev_hiddens = []\n",
+    "        prev_cells = []\n",
+    "        batch_preds = []\n",
+    "\n",
+    "        # Get inputs & outputs for first forecast step\n",
+    "        input_sequences, output_sequences = batch\n",
+    "        input_seq = input_sequences # Inputs of the forecast step 0, (N, input_length, input_size) \n",
+    "        output_seq = output_sequences[:, 0, :] # Target & future covars. of forecast step 0. Needed for later forecast steps, (N, 1, input_size) \n",
+    "\n",
+    "        # Perform training & recording for first forecast step\n",
+    "        last_hidden_state, last_cell_state, preds = self.forward(input_seq)\n",
+    "        prev_hiddens.append(last_hidden_state)\n",
+    "        prev_cells.append(last_cell_state)\n",
+    "        batch_preds.append(preds)\n",
+    "        h += 1\n",
+    "\n",
+    "        # Perform training & recording for remaining forecast steps\n",
+    "        while h < (self.output_length - 1):\n",
+    "\n",
+    "            # Get inputs & outputs for forecast step h: \n",
+    "            input_seq = torch.cat((\n",
+    "                input_seq[:, 1:, :], # Input of the previous forecast step, with the first row dropped, (N, input_length - 1, input_size)\n",
+    "                output_seq, # Target & future covars. of previous forecast step, the last row of the new input, (N, 1, input_size)\n",
+    "            ), dims = 1)\n",
+    "            \n",
+    "            output_seq = output_sequences[:, h, :] # Target & covars. of forecast step h. Needed for later forecast steps, (N, 1, input_size)\n",
+    "\n",
+    "            # Perform training & recording for forecast step h:\n",
+    "            last_hidden_state, last_cell_state, preds = self.forward(\n",
+    "                input_seq, \n",
+    "                prev_states = (prev_hiddens[h-1], prev_cells[h-1])\n",
+    "            )\n",
+    "            prev_hiddens.append(last_hidden_state)\n",
+    "            prev_cells.append(last_cell_state)\n",
+    "            batch_preds.append(preds)\n",
+    "            h += 1\n",
+    "\n",
+    "        # Calculate loss for forecast steps starting from horizon\n",
+    "        loss = self.loss.loss(\n",
+    "            batch_preds[self.horizon:], # Predictions from horizon to end of sequence, ??? \n",
+    "            output_sequences[:, self.horizon: , 0] # Target values from horizon to end of sequence, (N, output_length - horizon, 1)\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        "
    ]
   }
  ],
