Change LSTM to stateful, create scaler

--- a/3.1_QuantileLSTM.ipynb
+++ b/3.1_QuantileLSTM.ipynb
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "id": "3016ec43-cb1b-4f43-a5e8-b1650b7eebde",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "id": "3e763f7b-0356-4795-b1fe-63431e6bb7e0",
    "metadata": {},
    "outputs": [],
@@ -1294,67 +1294,101 @@
    "id": "83fbb6dc-8bb4-488f-aa19-98c76dfe73d0",
    "metadata": {},
    "source": [
-    "We have to scale the past consumption values in the input sequences, and the future consumption values in the output sequences, because they'll be the past values as the forecast horizon expands.\n",
+    "We have to scale the past consumption & trend values in the input sequences, and the future consumption & trend values in the output sequences, because they'll be the past values as the forecast horizon expands.\n",
     "\\\n",
     "We also need the ability to backtransform the network's final predictions accordingly. We need a class instead of a function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "b699628a-d604-4623-8446-23eafd41770c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define scaling function for 3-dimensional data\n",
-    "def scale_sequences(train_input, train_output, test_input, test_output):\n",
+    "# Define scaling class for sequence data\n",
+    "class sequence_scaler:\n",
     "\n",
-    "  \n",
-    "  # Retrieve number of dimensions\n",
-    "  n_dims = x_train.shape[1]\n",
-    "  \n",
-    "  # Retrieve each dimension in a list\n",
-    "  dims_train = [x_train[:, i, :] for i in range(0, n_dims)]\n",
-    "  dims_test = [x_test[:, i, :] for i in range(0, n_dims)]\n",
-    "  \n",
-    "  # Fit & transform training data for each dimension\n",
-    "  fitted_trafos = []\n",
-    "  fitted_mins = []\n",
-    "  fitted_maxi = []\n",
-    "  channels_train = []\n",
-    "  channels_test = []\n",
-    "  for dim in dims_train:\n",
-    "    \n",
-    "    # Copy base transformer\n",
-    "    fitted_trafo = trafo\n",
-    "    \n",
-    "    # Fit & transform dimension\n",
-    "    transformed = fitted_trafo.fit_transform(dim)\n",
-    "    \n",
-    "    # Save fitted transformer\n",
-    "    fitted_trafos.append(fitted_trafo)\n",
-    "    \n",
-    "    # Retrieve & save min, max of the dimension matrix\n",
-    "    dim_min = np.min(transformed)\n",
-    "    dim_max = np.max(transformed)\n",
-    "    fitted_mins.append(dim_min)\n",
-    "    fitted_maxi.append(dim_max)\n",
-    "    \n",
-    "    # Scale values between 0 and 1, append to list\n",
-    "    transformed_scaled = (transformed - dim_min) / (dim_max - dim_min)\n",
-    "    channels_train.append(transformed_scaled)\n",
-    "    \n",
-    "  # Transform testing data for each dimension\n",
-    "  for i, dim in enumerate(dims_test):\n",
-    "    \n",
-    "    # Transform & scale dimension, append to list\n",
-    "    transformed = fitted_trafos[i].transform(dim)\n",
-    "    transformed_scaled = (transformed - fitted_mins[i]) / (fitted_maxi[i] - fitted_mins[i])\n",
-    "    channels_test.append(transformed_scaled)\n",
-    "    \n",
-    "  # Stack the outputs\n",
-    "  output_train = np.stack(channels_train, axis = 1)\n",
-    "  output_test = np.stack(channels_test, axis = 1)\n"
+    "    def __init__(self, feature_range = (-1, 1)):\n",
+    "        self.lower = feature_range[0]\n",
+    "        self.upper = feature_range[1]\n",
+    "\n",
+    "    def fit(self, input_seq, output_seq):\n",
+    "\n",
+    "        # Get number of features\n",
+    "        self.num_features = input_seq.shape[2]\n",
+    "        \n",
+    "        # Extract & save minimum, maximum for each feature\n",
+    "        feature_mini = []\n",
+    "        feature_maxi = []\n",
+    "        for feature in range(0, self.num_features):\n",
+    "            min = np.min([\n",
+    "                np.min(input_seq[:, :, feature]),\n",
+    "                np.min(output_seq[:, :, feature])\n",
+    "            ])\n",
+    "            feature_mini.append(min)\n",
+    "\n",
+    "            max = np.max([\n",
+    "                np.max(input_seq[:, :, feature]),\n",
+    "                np.max(output_seq[:, :, feature])\n",
+    "            ])\n",
+    "            feature_maxi.append(max)\n",
+    "\n",
+    "        self.feature_mini = feature_mini\n",
+    "        self.feature_maxi = feature_maxi\n",
+    "\n",
+    "    def transform(self, sequences):\n",
+    "\n",
+    "        # Initialize list of scaled features\n",
+    "        scaled_features = []\n",
+    "\n",
+    "        # Scale each feature & append to list\n",
+    "        for feature in range(0, self.num_features):\n",
+    "            values = sequences[:, :, feature]\n",
+    "            min = self.feature_mini[feature]\n",
+    "            max = self.feature_maxi[feature]\n",
+    "            std = (values - min) / (max - min)\n",
+    "            scaled = std * (self.upper - self.lower) + self.lower\n",
+    "            scaled_features.append(scaled)\n",
+    "\n",
+    "        # Stack over 3rd dimension & return\n",
+    "        return np.stack(scaled_features, axis = 2)\n",
+    "\n",
+    "    def backtransform(self, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "14cf3a58-b711-4157-abf7-0f066ec713b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale validation data\n",
+    "scaler_val = sequence_scaler()\n",
+    "_ = scaler_val.fit(tr_input, tr_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "409cf8e2-b964-4ae7-8e5c-f606bf2227f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.08952997e-01, -1.00000000e+00, -1.00000000e+00, -2.22044605e-16,\n",
+       "        8.01937736e-01,  6.03875472e-01,  5.00000000e-01,  8.66025404e-01])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler_val.transform(tr_input)"
    ]
   },
   {
@@ -1397,7 +1431,7 @@
    "outputs": [],
    "source": [
     "# Define model class\n",
-    "class QuantileLSTM(L.LightningModule):\n",
+    "class StatefulQuantileLSTM(L.LightningModule):\n",
     "\n",
     "    # Initialize model\n",
     "    def __init__(self, hyperparams_dict):\n",
@@ -1449,10 +1483,10 @@
     "\n",
     "        # Pass inputs through LSTMs\n",
     "        # If prev_states is not passed, they are automatically initialized as zeroes\n",
-    "        if prev_states:\n",
-    "            lstm_output, (last_hidden_states, last_cell_states) = self.lstm(input_chunk, prev_states)\n",
-    "        else: \n",
+    "        if prev_states == None:\n",
     "            lstm_output, (last_hidden_states, last_cell_states) = self.lstm(input_chunk)\n",
+    "        else: \n",
+    "            lstm_output, (last_hidden_states, last_cell_states) = self.lstm(input_chunk, prev_states)\n",
     "\n",
     "        # Pass LSTM output through output layer\n",
     "        preds = self.output_layer(lstm_output)\n",
@@ -1471,10 +1505,18 @@
     "        # Get inputs & outputs for first forecast step\n",
     "        input_sequences, output_sequences = batch\n",
     "        input_seq = input_sequences # Inputs of the forecast step 0. (N, input_length, input_size) \n",
-    "        output_seq = output_sequences[:, 0, :] # Target & future covars of forecast step 0. Needed for later forecast steps. (N, 1, input_size) \n",
+    "        output_seq = output_sequences[:, 0, :] # Target & future covars of forecast step 0. Needed for later forecast steps. (N, 1, input_size)\n",
     "\n",
     "        # Perform training & recording for first forecast step\n",
-    "        last_hidden_states, last_cell_states, preds = self.forward(input_seq)\n",
+    "        # If a hidden & cell state is retained from the previous batch, use it. This will be the case for all batches except the first in an epoch.\n",
+    "        if self._last_hiddens_train == None:\n",
+    "            last_hidden_states, last_cell_states, preds = self.forward(input_seq)\n",
+    "        else:\n",
+    "            last_hidden_states, last_cell_states, preds = self.forward(\n",
+    "                input_seq, \n",
+    "                prev_states = (self._last_hiddens_train, self._last_cells_train)\n",
+    "            )\n",
+    "\n",
     "        prev_hiddens.append(last_hidden_states) # 1-dimensional list. Each element has shape (num_layers, N, hidden_size)\n",
     "        prev_cells.append(last_cell_states) # 1-dimensional list. Each element has shape (num_layers, N, hidden_size)\n",
     "        batch_preds.append(preds) # 1-dimensional list. Each element has shape (N, 1)\n",
@@ -1503,17 +1545,108 @@
     "\n",
     "        # Calculate loss for forecast steps starting from horizon\n",
     "        preds_horizon = batch_preds[self.horizon:] # List length (output_length - horizon). Each elememt has shape (N, 1).\n",
-    "        preds_horizon = torch.cat(preds_horizon, dim = 1) # Shape (N, output_length - horizon)\n",
-    "        # Reshape???\n",
+    "        preds_horizon = torch.cat(preds_horizon, dim = 1) # Shape (N, output_length - horizon) # RESHAPE???\n",
+    "\n",
     "        loss = self.loss.loss(\n",
     "            preds_horizon, \n",
     "            output_sequences[:, self.horizon: , 0] # Target values from horizon to end of sequence. Shape(N, output_length - horizon, 1)\n",
     "        )\n",
+    "\n",
+    "        # Log the training loss\n",
+    "        self.log(\"train_loss\", loss, on_step = True, on_epoch = True, prog_bar = True, logger = True)\n",
+    "\n",
+    "        # Update last hidden & cell states from training (for within-epoch use)\n",
+    "        self._last_hiddens_train = prev_hiddens[-1]\n",
+    "        self._last_cells_train = prev_cells[-1]\n",
+    "\n",
+    "        # Update final hidden & cell states from training (for inference)\n",
+    "        self._final_hiddens_train = prev_hiddens[-1]\n",
+    "        self._final_cells_train = prev_cells[-1]\n",
+    "        \n",
     "        return loss\n",
     "\n",
+    "    # When a training epoch ends, flush the last hidden & cell states.\n",
+    "    # Final hidden & cell states remain for inference.\n",
+    "    def on_train_epoch_end(self):\n",
+    "        self._last_hiddens_train = None\n",
+    "        self._last_cells_train = None\n",
+    "\n",
+    "    # Method to flush the final hidden & cell states left from training, if desired\n",
+    "    def reset_context(self):\n",
+    "        self._final_hiddens_train = None\n",
+    "        self._final_cells_train = None\n",
+    "\n",
     "    # Define validation_step\n",
+    "    def validation_step(self, batch, batch_idx):\n",
+    "\n",
+    "        # Initialize variables to record horizon, hidden & cell states, predictions\n",
+    "        h = 0\n",
+    "        prev_hiddens = []\n",
+    "        prev_cells = []\n",
+    "        batch_preds = []\n",
+    "\n",
+    "        # Get inputs & outputs for first forecast step\n",
+    "        input_sequences, output_sequences = batch\n",
+    "        input_seq = input_sequences # Inputs of the forecast step 0. (N, input_length, input_size) \n",
+    "        output_seq = output_sequences[:, 0, :] # Target & future covars of forecast step 0. Needed for later forecast steps. (N, 1, input_size)\n",
+    "\n",
+    "        # Perform validation & recording for first forecast step\n",
+    "        # If a hidden & cell state is retained from training, use it.\n",
+    "        if self._final_hiddens_train == None:\n",
+    "            last_hidden_states, last_cell_states, preds = self.forward(input_seq)\n",
+    "        else:\n",
+    "            last_hidden_states, last_cell_states, preds = self.forward(\n",
+    "                input_seq, \n",
+    "                prev_states = (self._final_hiddens_train, self._final_cells_train)\n",
+    "            )\n",
+    "\n",
+    "        prev_hiddens.append(last_hidden_states) # 1-dimensional list. Each element has shape (num_layers, N, hidden_size)\n",
+    "        prev_cells.append(last_cell_states) # 1-dimensional list. Each element has shape (num_layers, N, hidden_size)\n",
+    "        batch_preds.append(preds) # 1-dimensional list. Each element has shape (N, 1)\n",
+    "        h += 1\n",
+    "\n",
+    "        # Perform training & recording for remaining forecast steps\n",
+    "        while h < (self.output_length - 1):\n",
+    "\n",
+    "            # Get inputs & outputs for forecast step h: \n",
+    "            input_seq = torch.cat((\n",
+    "                input_seq[:, 1:, :], # Inputs of the previous forecast step, with the first row dropped. (N, input_length - 1, input_size)\n",
+    "                output_seq, # Target & future covars of previous forecast step, the last row of the new input. (N, 1, input_size)\n",
+    "            ), dims = 1)\n",
+    "            \n",
+    "            output_seq = output_sequences[:, h, :] # Target & covars. of forecast step h. Needed for later forecast steps. (N, 1, input_size)\n",
+    "\n",
+    "            # Perform training & recording for forecast step h:\n",
+    "            last_hidden_states, last_cell_states, preds = self.forward(\n",
+    "                input_seq, \n",
+    "                prev_states = (prev_hiddens[h-1], prev_cells[h-1])\n",
+    "            )\n",
+    "            prev_hiddens.append(last_hidden_states)\n",
+    "            prev_cells.append(last_cell_states)\n",
+    "            batch_preds.append(preds)\n",
+    "            h += 1\n",
+    "\n",
+    "        # Calculate loss for forecast steps starting from horizon\n",
+    "        preds_horizon = batch_preds[self.horizon:] # List length (output_length - horizon). Each elememt has shape (N, 1).\n",
+    "        preds_horizon = torch.cat(preds_horizon, dim = 1) # Shape (N, output_length - horizon) # RESHAPE???\n",
+    "\n",
+    "        loss = self.loss.loss(\n",
+    "            preds_horizon, \n",
+    "            output_sequences[:, self.horizon: , 0] # Target values from horizon to end of sequence. Shape(N, output_length - horizon, 1)\n",
+    "        )\n",
+    "\n",
+    "        # Log the val. loss\n",
+    "        self.log(\"val_loss\", loss, on_step = True, on_epoch = True, prog_bar = True, logger = True)\n",
+    "\n",
+    "        return loss\n",
     "\n",
     "    # Define prediction_step\n",
+    "    def predict_step(self, batch, batch_idx):\n",
+    "\n",
+    "        # Stack the prediction at h = 0 (N, output_length, 1) with the future covars (N, output_length, 1)\n",
+    "\n",
+    "       \n",
+    "        \n",
     "\n",
     "    # Define optimizer & learning rate scheduler\n",
     "    def configure_optimizers(self):\n",
